@startuml Trajet Service Class Diagram

package "ma.ensias.soa.trajetservice" {
    
    ' ========== ENTITIES ==========
    class Trajet {
        -Long id
        -String ligneCode
        -String depart
        -String arrivee
        -List<String> arrets
        -double distanceKm
        -boolean active
    }
    
    class Horaire {
        -Long id
        -Trajet trajet
        -Time heureDepart
        -Time heureArrivee
        -String jour
    }
    
    ' ========== DTOs ==========
    class TrajetDTO {
        -Long id
        -String ligneCode
        -String depart
        -String arrivee
        -List<String> arrets
        -double distanceKm
        -boolean active
    }
    
    class HoraireDTO {
        -Long id
        -Long trajetId
        -Time heureDepart
        -Time heureArrivee
        -String jour
    }
    
    class TrajetEventDTO {
        -Long trajetId
        -String eventType
        -Timestamp timestamp
    }
    
    ' ========== CONTROLLERS ==========
    class TrajetController {
        +getAll(): ResponseEntity<List<TrajetDTO>>
        +getById(Long): ResponseEntity<TrajetDTO>
        +search(String, String): ResponseEntity<List<TrajetDTO>>
        +add(TrajetDTO): ResponseEntity<TrajetDTO>
        +update(Long, TrajetDTO): ResponseEntity<TrajetDTO>
        +delete(Long): ResponseEntity<Void>
    }
    
    class HoraireController {
        +getHorairesByTrajet(Long): ResponseEntity<List<HoraireDTO>>
        +addHoraire(Long, HoraireDTO): ResponseEntity<HoraireDTO>
    }
    
    ' ========== SERVICES ==========
    class TrajetService {
        -TrajetRepository trajetRepository
        -TrajetEventProducer eventProducer
        +getAllTrajets(): List<TrajetDTO>
        +getTrajetById(Long): TrajetDTO
        +searchTrajets(String, String): List<TrajetDTO>
        +addTrajet(TrajetDTO): TrajetDTO
        +updateTrajet(Long, TrajetDTO): TrajetDTO
        +deleteTrajet(Long): void
        -toDto(Trajet): TrajetDTO
        -toEntity(TrajetDTO): Trajet
    }
    
    class HoraireService {
        -HoraireRepository horaireRepository
        -TrajetRepository trajetRepository
        +getHorairesByTrajet(Long): List<HoraireDTO>
        +addHoraire(Long, HoraireDTO): HoraireDTO
        -toDto(Horaire): HoraireDTO
    }
    
    ' ========== REPOSITORIES ==========
    interface TrajetRepository {
        +findById(Long): Optional<Trajet>
        +findAll(): List<Trajet>
        +findByDepartAndArrivee(String, String): List<Trajet>
        +findByActiveTrue(): List<Trajet>
        +save(Trajet): Trajet
        +deleteById(Long): void
    }
    
    interface HoraireRepository {
        +findById(Long): Optional<Horaire>
        +findByTrajet(Trajet): List<Horaire>
        +save(Horaire): Horaire
        +deleteById(Long): void
    }
    
    ' ========== KAFKA ==========
    class TrajetEventProducer {
        +sendTrajetEvent(TrajetEventDTO): void
    }
    
    ' ========== CONFIG ==========
    class KafkaConfig {
        +kafkaTemplate(): KafkaTemplate
    }
    
    class CorsConfig {
        +corsFilter(): CorsFilter
    }
    
    ' ========== RELATIONSHIPS ==========
    TrajetController --> TrajetService
    HoraireController --> HoraireService
    TrajetService --> TrajetRepository
    TrajetService --> TrajetEventProducer
    HoraireService --> HoraireRepository
    HoraireService --> TrajetRepository
    TrajetRepository ..> Trajet
    HoraireRepository ..> Horaire
    Horaire --> Trajet : "many-to-one"
    TrajetEventProducer ..> TrajetEventDTO
    
    note right of Trajet
        Entity representing
        bus routes/trajectories
    end note
    
    note right of Horaire
        Entity representing
        schedule/timetable
        for routes
    end note
    
    note right of TrajetService
        Manages routes
        and route operations
    end note

}

@enduml

